--- a/presentation/src/main/res/layout/activity_club.xml
+++ b/presentation/src/main/res/layout/activity_club.xml
@@ -12,5 +12,13 @@
         android:layout_height="match_parent"
         tools:context=".ui.club.ClubActivity">
 
+        <fragment
+            android:id="@+id/nav_host"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/club_nav_graph" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
