--- a/presentation/src/main/res/layout/activity_student.xml
+++ b/presentation/src/main/res/layout/activity_student.xml
@@ -12,6 +12,13 @@
         android:layout_height="match_parent"
         tools:context=".ui.student.StudentActivity">
 
+        <fragment
+            android:id="@+id/nav_host"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/student_nav_graph" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
