--- a/presentation/src/main/res/layout/fragment_student_shearch.xml
+++ b/presentation/src/main/res/layout/fragment_student_shearch.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="fragment"
             type="com.example.presentation.ui.student.StudentShearchFragment" />
@@ -18,6 +19,7 @@
             android:id="@+id/edittext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="@string/input_search_word"
             android:iconifiedByDefault="false"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
@@ -31,11 +33,22 @@
             android:layout_height="0dp"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/go_main"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/edittext"
-            tools:listitem="@layout/item_layout" />
+            tools:listitem="@layout/student_item_layout" />
+
+        <Button
+            android:id="@+id/go_main"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/go_main"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
