--- a/presentation/src/main/res/layout/activity_teacher.xml
+++ b/presentation/src/main/res/layout/activity_teacher.xml
@@ -16,7 +16,7 @@
         tools:context=".ui.teacher.TeacherActivity">
 
         <EditText
-            android:id="@+id/edittext"
+            android:id="@+id/teacher_srch__edittext"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:hint="@string/input_search_word"
@@ -33,18 +33,18 @@
             android:layout_height="0dp"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toTopOf="@id/go_main"
+            app:layout_constraintBottom_toTopOf="@id/go_back"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edittext"
+            app:layout_constraintTop_toBottomOf="@id/teacher_srch__edittext"
             tools:listitem="@layout/teacher_item_layout" />
 
         <Button
             android:onClick="@{activity::goMain}"
-            android:id="@+id/go_main"
+            android:id="@+id/go_back"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/go_main"
+            android:text="@string/go_back"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
