--- a/presentation/src/main/res/layout/fragment_club_modify.xml
+++ b/presentation/src/main/res/layout/fragment_club_modify.xml
@@ -122,6 +122,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/teacher"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -158,6 +159,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/club_head"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -221,7 +223,8 @@
             app:layout_constraintTop_toTopOf="@+id/guideline7" />
 
         <Button
-            android:layout_width="match_parent"
+            android:id="@+id/modify_end_btn"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:backgroundTint="#E91E1E"
             android:text="@string/finish_modify"
@@ -229,8 +232,20 @@
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/go_back"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/go_back"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/go_back"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/modify_end_btn" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
