--- a/presentation/src/main/res/layout/fragment_club_search.xml
+++ b/presentation/src/main/res/layout/fragment_club_search.xml
@@ -17,7 +17,7 @@
 
 
         <EditText
-            android:id="@+id/edittext"
+            android:id="@+id/club_srch_edittext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/input_search_word"
@@ -34,17 +34,18 @@
             android:layout_height="0dp"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toTopOf="@id/go_main"
+            app:layout_constraintBottom_toTopOf="@id/go_back"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edittext"
+            app:layout_constraintTop_toBottomOf="@id/club_srch_edittext"
             tools:listitem="@layout/club_item_layout" />
 
         <Button
-            android:id="@+id/go_main"
+            android:onClick="@{fragment::goMain}"
+            android:id="@+id/go_back"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/go_main"
+            android:text="@string/go_back"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
