--- a/presentation/src/main/res/layout/fragment_student_modify.xml
+++ b/presentation/src/main/res/layout/fragment_student_modify.xml
@@ -64,6 +64,7 @@
                 android:textStyle="bold" />
 
             <EditText
+                android:id="@+id/student_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -94,6 +95,7 @@
                 android:textStyle="bold" />
 
             <EditText
+                android:id="@+id/student_num"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -117,7 +119,8 @@
             app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
         <Button
-            android:layout_width="match_parent"
+            android:id="@+id/modify_end_btn"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:backgroundTint="#E91E1E"
             android:text="@string/modify"
@@ -125,8 +128,20 @@
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/go_back"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/go_back"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/go_back"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/modify_end_btn" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
