--- a/presentation/src/main/res/layout/student_item_layout.xml
+++ b/presentation/src/main/res/layout/student_item_layout.xml
@@ -32,7 +32,7 @@
             app:layout_constraintGuide_percent="0.78" />
 
         <TextView
-            android:id="@+id/user_name"
+            android:id="@+id/item_student_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/name"
@@ -43,7 +43,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/user_number"
+            android:id="@+id/item_student_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/user_num"
@@ -74,7 +74,6 @@
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@id/guideline3"
             app:layout_constraintTop_toTopOf="parent" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
