--- a/presentation/src/main/res/layout/student_move_item_layout.xml
+++ b/presentation/src/main/res/layout/student_move_item_layout.xml
@@ -15,36 +15,37 @@
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.1" />
+            app:layout_constraintGuide_percent="0.2" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.5" />
+            app:layout_constraintGuide_percent="0.65" />
 
         <TextView
-            android:id="@+id/club_name"
+            android:id="@+id/item_club_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/name"
             android:textColor="@color/cardview_dark_background"
-            android:textSize="35sp"
+            android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@id/guideline1"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/club_modify_btn"
+            android:id="@+id/choose_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/modify"
+            android:text="@string/choose"
             android:textColor="@color/cardview_dark_background"
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@id/guideline2"
             app:layout_constraintTop_toTopOf="parent" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
