--- a/presentation/src/main/res/layout/teacher_item_layout.xml
+++ b/presentation/src/main/res/layout/teacher_item_layout.xml
@@ -25,7 +25,7 @@
             app:layout_constraintGuide_percent="0.5" />
 
         <TextView
-            android:id="@+id/user_name"
+            android:id="@+id/item_teacher_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/name"
@@ -36,7 +36,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/teacher_club"
+            android:id="@+id/item_teacher_club_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/club"
